Fix radio checbox alignment

--- a/stylesheets/components/_radioCheckbox.scss
+++ b/stylesheets/components/_radioCheckbox.scss
@@ -11,6 +11,7 @@
   outline: none;
   position: relative;
   visibility: hidden;
+  display: none;
 }
 
 .radioButtons__label,
@@ -34,7 +35,7 @@
   content: "\f1db";
   font-family: "FontAwesome";
   font-size: 1.5em;
-  padding: 1px 2px;
+  padding: 1px 2px 0 0;
 }
 
 .radioButtons__input:checked + .radioButtons__label:before {
